# LilyGO-T-HMI-ESP-IDF-v5.X

./: .gitignore  CMakeLists.txt  README.md  code.code-workspace  partition.csv  sdkconfig  sdkconfig.defaults.v5.5.4.thmi  sdkconfig.old
config/board_config/: CMakeLists.txt
config/board_pins/: CMakeLists.txt  board_pins.h
config/lvgl_framework_config/: lvgl_framework_config.h
configs/board_pins/: board_pins.h
configs/lvgl_framework_config/: CMakeLists.txt  lvgl_framework_config.h
extras/: lvgl_port.c
frameworks/bsp_lvgl_framework/: CMakeLists.txt  bsp_lvgl_buffers.c  bsp_lvgl_framework.c  bsp_lvgl_freertos_utils.c  bsp_lvgl_indev.c  bsp_lvgl_mutex_utils.c  bsp_lvgl_rotation.c  lvgl_framework_internals.h
frameworks/bsp_lvgl_framework/include/: lvgl_framework.h
interfaces/bsp_i80_parallel_interface/: CMakeLists.txt  i80_parallel_bsp_interface.c  i80_parallel_bsp_interface.h
interfaces/bsp_lcd_interface/: CMakeLists.txt  lcd_bsp_interface.c  lcd_bsp_interface.h
interfaces/bsp_spi_interface/: CMakeLists.txt  spi_bsp_interface.c  spi_bsp_interface.h
interfaces/bsp_touch_interface/: CMakeLists.txt  touch_bsp_interface.c  touch_bsp_interface.h
main/: CMakeLists.txt  main.cpp  ui-2.h  ui.h
modules/esp32-cmd-cli/: CMakeLists.txt  banner.h  config.h  esp32-cmd-cli.c  esp32-cmd-cli.h
modules/esp32-cmd-cli/modules/: modules.h
modules/esp32-cmd-cli/modules/adc_cmd/: adc_cmd.c  adc_cmd.h
modules/esp32-cmd-cli/modules/gpio_cmd/: gpio_cmd.c  gpio_cmd.h
modules/esp32-cmd-cli/modules/log_cmd/: log_cmd.c  log_cmd.h
modules/esp32-cmd-cli/modules/mem_cmd/: mem_cmd.c  mem_cmd.h
modules/esp32-cmd-cli/modules/net_cmd/: net_cmd.c  net_cmd.h
modules/esp32-cmd-cli/modules/nvs_cmd/: nvs_cmd.c  nvs_cmd.h
modules/esp32-cmd-cli/modules/part_cmd/: part_cmd.c  part_cmd.h
modules/esp32-cmd-cli/modules/sys_cmd/: sys_cmd.c  sys_cmd.h
modules/esp32-cmd-cli/modules/tasks_cmd/: config.h  tasks_cmd.c
modules/esp32-cmd-cli/modules/wifi_cmd/: wifi_cmd.c  wifi_cmd.h
modules/filesystem/: CMakeLists.txt
modules/filesystem/include/: defines.h
modules/filesystem/src/: FAT_fs.c  LITTLE_fs.c  SPIF_fs.c  eMMC_fs.c  filesystem.c
modules/onebutton/: version.txt
modules/simple-cli-thmi/: CMakeLists.txt  version.txt
modules/simple-cli-thmi-v001/: README.md
modules/simple-cli-thmi-v001/include/: config.h
modules/simple-cli-thmi-v001/modules/: modules.h
modules/simple-cli-thmi-v001/modules/hello_cmd/: hello_cmd.c
modules/simple-cli-thmi-v001/modules/timers_module_cmd/: timers_module_cmd.c
modules/simple-cli-thmi-v001/modules/uptime_cmd/: uptime_cmd.c
modules/simple-cli-thmi-v001/src/: one-cli.c
modules/simple-cli-thmi/include/: one-cli.h
modules/simple-cli-thmi/modules/restart_cmd/: restart_cmd.c
modules/simple-cli-thmi/modules/tasks_cmd/: tasks_cmd.c
modules/simple-cli-thmi/modules/timers_module_cmd/: timers_module_cmd.h
modules/simple-cli-thmi/src/: init.c
